Naive bayes for text classification somewhat done, but re-implementing stuff

--- a/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
+++ b/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -92,7 +92,6 @@
     "        Parameters:\n",
     "        ----------\n",
     "        string: string to be parsed...\n",
-    "        re: regular expression to be used for the tokenization.\n",
     "        \n",
     "        Returns:\n",
     "        ----------\n",
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -150,43 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "file(name[, mode[, buffering]]) -> file object\n",
-      "\n",
-      "Open a file.  The mode can be 'r', 'w' or 'a' for reading (default),\n",
-      "writing or appending.  The file will be created if it doesn't exist\n",
-      "when opened for writing or appending; it will be truncated when\n",
-      "opened for writing.  Add a 'b' to the mode for binary files.\n",
-      "Add a '+' to the mode to allow simultaneous reading and writing.\n",
-      "If the buffering argument is given, 0 means unbuffered, 1 means line\n",
-      "buffered, and larger numbers specify the buffer size.  The preferred way\n",
-      "to open a file is with the builtin open() function.\n",
-      "Add a 'U' to mode to open the file for input with universal newline\n",
-      "support.  Any line ending in the input file will be seen as a '\\n'\n",
-      "in Python.  Also, a file so opened gains the attribute 'newlines';\n",
-      "the value for this attribute is one of None (no newline read yet),\n",
-      "'\\r', '\\n', '\\r\\n' or a tuple containing all the newline types seen.\n",
-      "\n",
-      "'U' cannot be combined with 'w' or '+' mode.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print file.__doc__\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -225,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -256,51 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "films adapted from comic books have had plenty of success , whether they're about superheroes ( batm\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['films',\n",
-       " 'adapted',\n",
-       " 'from',\n",
-       " 'comic',\n",
-       " 'books',\n",
-       " 'have',\n",
-       " 'had',\n",
-       " 'plenty',\n",
-       " 'of',\n",
-       " 'success',\n",
-       " 'whether',\n",
-       " 'theyre',\n",
-       " 'about',\n",
-       " 'superheroes',\n",
-       " 'batm']"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print strings[1][:100]\n",
-    "parse_string(strings[1][:100])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -318,7 +237,7 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "#raise NotImplementedError()\n",
     "        \n",
     "## Hint, you can use python dictionary or default dict for counting the words\n",
     "# or counter class from collections \n",
@@ -327,14 +246,21 @@
     "\n",
     "#You might need to define auxiliary classes for the complete algorithm..\n",
     "\n",
+    "from collections import defaultdict\n",
+    "from itertools import izip \n",
+    "\n",
     "class NaiveBayes:\n",
     "    ''' Implements the Naive Bayes For Text Classification... '''\n",
     "    def __init__(self, classes):\n",
     "        self.classes=classes\n",
+    "        self.bow = {}\n",
+    "        self.countsdict = defaultdict(int)\n",
     "        \n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
-    "        \n",
+    "        for k in self.classes: \n",
+    "            self.bow[k] = defaultdict(int)\n",
+    "        #raise NotImplementedError()\n",
+    "        return \n",
     "        \n",
     "    def addExample(self, x, y):\n",
     "        '''\n",
@@ -346,7 +272,12 @@
     "        '''\n",
     "        \n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        self.countsdict[y] += 1 \n",
+    "        \n",
+    "        res = parse_string(str(x))\n",
+    "        for word in res: \n",
+    "            self.bow[y][word] += 1 \n",
+    "        #raise NotImplementedError()\n",
     "        \n",
     "    def train(self, X, Y):\n",
     "        ''' Train the multiclass (or Binary) Bayes Rule using the given \n",
@@ -362,7 +293,10 @@
     "            Nothing\n",
     "            '''\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        for example, label in izip(X, Y): \n",
+    "            self.addExample(example, label)\n",
+    "            \n",
+    "        #raise NotImplementedError()\n",
     "        \n",
     "    def test(self, X):\n",
     "        \n",
@@ -381,8 +315,19 @@
     "        nexamples, nfeatures=X.shape\n",
     "          \n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
-    "        return\n",
+    "        print nexamples, nfeatures \n",
+    "        \n",
+    "        out = []\n",
+    "        for test in X: \n",
+    "            testdict = defaultdict(int)\n",
+    "            res = parse_string(str(test))\n",
+    "            \n",
+    "            for r in res: \n",
+    "                testdict[r] += 1\n",
+    "                \n",
+    "        return testdict.items()\n",
+    "        #raise NotImplementedError()\n",
+    "        #return\n",
     "        \n",
     "    def predict(self, x):\n",
     "        '''\n",
@@ -402,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -417,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -434,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -458,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -474,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -484,18 +429,56 @@
      "output_type": "stream",
      "text": [
       "[Info] training a classifier for following classes neg, pos\n",
-      "[Info] Accuracy = 0.823333333333\n"
+      "600 1\n",
+      "[Info] Accuracy = 0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/muneebaadil/anaconda2/lib/python2.7/site-packages/ipykernel/__main__.py:6: FutureWarning: comparison to `None` will result in an elementwise object comparison in the future.\n"
      ]
     }
    ],
    "source": [
     "#Now build a Naive Bayes classifier and test it...\n",
     "print '[Info] training a classifier for following classes {}, {}'.format(classes[0],classes[1])\n",
-    "nb=NaiveBayes(classes)\n",
+    "nb=NaiveBayes(classes) \n",
     "nb.train(traindata,trainlabels)\n",
     "pclasses=nb.test(testdata)\n",
     "acc=np.sum(pclasses==testlabels)/float(testlabels.shape[0])\n",
     "print \"[Info] Accuracy = {}\".format(acc)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('[hello', 1.0), ('world]', 1.0)]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abc = NaiveBayes(['neg', 'pos'])\n",
+    "abc.test(np.array([['hello world']]))"
    ]
   },
   {
