train() and addExample() method implemented using defaultdict

--- a/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
+++ b/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -105,7 +105,7 @@
     "        #print '\\n', w\n",
     "        res = re.sub(r'[^ a-zA-z]|[_]', '', w)\n",
     "        if res != '':\n",
-    "            out.append(res)\n",
+    "            out.append(res.lower())\n",
     "        #out.append(res) if (res != '') else pass\n",
     "    #raise NotImplementedError()\n",
     "    #print out \n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -247,20 +247,20 @@
     "#You might need to define auxiliary classes for the complete algorithm..\n",
     "\n",
     "from collections import defaultdict\n",
-    "from itertools import izip \n",
+    "from itertools import izip\n",
+    "\n",
+    "def vocabfactory():\n",
+    "    return defaultdict(int)\n",
     "\n",
     "class NaiveBayes:\n",
     "    ''' Implements the Naive Bayes For Text Classification... '''\n",
     "    def __init__(self, classes):\n",
     "        self.classes=classes\n",
-    "        self.bow = {}\n",
-    "        self.countsdict = defaultdict(int)\n",
     "        \n",
     "        # YOUR CODE HERE\n",
-    "        for k in self.classes: \n",
-    "            self.bow[k] = defaultdict(int)\n",
+    "        self.vocab = defaultdict(vocabfactory)\n",
+    "        self.counts = defaultdict(int)\n",
     "        #raise NotImplementedError()\n",
-    "        return \n",
     "        \n",
     "    def addExample(self, x, y):\n",
     "        '''\n",
@@ -272,11 +272,10 @@
     "        '''\n",
     "        \n",
     "        # YOUR CODE HERE\n",
-    "        self.countsdict[y] += 1 \n",
-    "        \n",
-    "        res = parse_string(str(x))\n",
-    "        for word in res: \n",
-    "            self.bow[y][word] += 1 \n",
+    "        self.counts[y] += 1\n",
+    "        words = parse_string(str(x))\n",
+    "        for word in words: \n",
+    "            self.vocab[word][y] += 1  \n",
     "        #raise NotImplementedError()\n",
     "        \n",
     "    def train(self, X, Y):\n",
@@ -295,7 +294,6 @@
     "        # YOUR CODE HERE\n",
     "        for example, label in izip(X, Y): \n",
     "            self.addExample(example, label)\n",
-    "            \n",
     "        #raise NotImplementedError()\n",
     "        \n",
     "    def test(self, X):\n",
@@ -315,17 +313,6 @@
     "        nexamples, nfeatures=X.shape\n",
     "          \n",
     "        # YOUR CODE HERE\n",
-    "        print nexamples, nfeatures \n",
-    "        \n",
-    "        out = []\n",
-    "        for test in X: \n",
-    "            testdict = defaultdict(int)\n",
-    "            res = parse_string(str(test))\n",
-    "            \n",
-    "            for r in res: \n",
-    "                testdict[r] += 1\n",
-    "                \n",
-    "        return testdict.items()\n",
     "        #raise NotImplementedError()\n",
     "        #return\n",
     "        \n",
@@ -347,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -362,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -379,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -403,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -419,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -429,7 +416,6 @@
      "output_type": "stream",
      "text": [
       "[Info] training a classifier for following classes neg, pos\n",
-      "600 1\n",
       "[Info] Accuracy = 0.0\n"
      ]
     },
