Test() implemented; with accuracy = 0.5

--- a/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
+++ b/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -248,6 +248,7 @@
     "\n",
     "from collections import defaultdict\n",
     "from itertools import izip\n",
+    "import math \n",
     "\n",
     "def vocabfactory():\n",
     "    return defaultdict(int)\n",
@@ -258,8 +259,10 @@
     "        self.classes=classes\n",
     "        \n",
     "        # YOUR CODE HERE\n",
+    "        self.nexamples = 0 \n",
     "        self.vocab = defaultdict(vocabfactory)\n",
-    "        self.counts = defaultdict(int)\n",
+    "        self.classcounts = defaultdict(int)\n",
+    "        self.wordperclasscounts = defaultdict(int)\n",
     "        #raise NotImplementedError()\n",
     "        \n",
     "    def addExample(self, x, y):\n",
@@ -272,10 +275,12 @@
     "        '''\n",
     "        \n",
     "        # YOUR CODE HERE\n",
-    "        self.counts[y] += 1\n",
+    "        self.classcounts[y] += 1\n",
+    "        self.nexamples += 1 \n",
     "        words = parse_string(str(x))\n",
     "        for word in words: \n",
     "            self.vocab[word][y] += 1  \n",
+    "            self.wordperclasscounts[y] += 1 \n",
     "        #raise NotImplementedError()\n",
     "        \n",
     "    def train(self, X, Y):\n",
@@ -313,8 +318,11 @@
     "        nexamples, nfeatures=X.shape\n",
     "          \n",
     "        # YOUR CODE HERE\n",
+    "        out = []\n",
+    "        for example in X: \n",
+    "            out.append(self.predict(example))\n",
     "        #raise NotImplementedError()\n",
-    "        #return\n",
+    "        return np.array(out)\n",
     "        \n",
     "    def predict(self, x):\n",
     "        '''\n",
@@ -327,9 +335,28 @@
     "        '''\n",
     "        \n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        words = parse_string(str(x))\n",
+    "        wordcounts = defaultdict(int)\n",
+    "        vocablen = len(self.vocab.keys())\n",
     "        \n",
-    "        return"
+    "        for w in words: \n",
+    "            wordcounts[w] += 1 \n",
+    "        \n",
+    "        maxprob = 0.0 \n",
+    "        maxclass = self.classes[0]\n",
+    "        for k in self.classes: \n",
+    "            prob = 0.0\n",
+    "            for w in words: \n",
+    "                toadd = wordcounts[w] * math.log((self.vocab[w][k]+1.) / (self.wordperclasscounts[k]+vocablen))\n",
+    "                prob += toadd\n",
+    "            prob += ((1. * self.classcounts[k])/self.nexamples)\n",
+    "            \n",
+    "            if prob > maxprob: \n",
+    "                maxprob = prob \n",
+    "                maxclass = k\n",
+    "        #raise NotImplementedError()\n",
+    "        return k \n",
+    "        "
    ]
   },
   {
@@ -349,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -366,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -390,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -406,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -416,14 +443,7 @@
      "output_type": "stream",
      "text": [
       "[Info] training a classifier for following classes neg, pos\n",
-      "[Info] Accuracy = 0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/muneebaadil/anaconda2/lib/python2.7/site-packages/ipykernel/__main__.py:6: FutureWarning: comparison to `None` will result in an elementwise object comparison in the future.\n"
+      "[Info] Accuracy = 0.5\n"
      ]
     }
    ],
@@ -438,36 +458,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('[hello', 1.0), ('world]', 1.0)]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "abc = NaiveBayes(['neg', 'pos'])\n",
-    "abc.test(np.array([['hello world']]))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -477,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": false,
