Fastened parse_string() func; much better training and testing time now

--- a/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
+++ b/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -99,22 +99,13 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    out = []\n",
-    "    wordslist = string.split()\n",
-    "    for w in wordslist: \n",
-    "        #print '\\n', w\n",
-    "        res = re.sub(r'[^ a-zA-z]|[\\[_]', '', w)\n",
-    "        if res != '':\n",
-    "            out.append(res.lower())\n",
-    "        #out.append(res) if (res != '') else pass\n",
-    "    #raise NotImplementedError()\n",
-    "    #print out \n",
-    "    return out "
+    "    res = re.sub(r'[^ a-zA-Z]', '', string)\n",
+    "    return res.lower().split()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -122,16 +113,16 @@
     {
      "data": {
       "text/plain": [
-       "[u'it\\\\s', u'okay']"
+       "['hello', 'its', 'me']"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parse_string(u'it\\s okay')"
+    "parse_string('[ hello it\\'s me')"
    ]
   },
   {
@@ -241,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -338,7 +329,7 @@
     "        '''\n",
     "        \n",
     "        nexamples, nfeatures=X.shape\n",
-    "          \n",
+    "        print 'vocab length =', len(self.vocab.keys())\n",
     "        # YOUR CODE HERE\n",
     "        out = np.zeros(shape=(nexamples,), dtype='S3')\n",
     "        for i, example in enumerate(X): \n",
@@ -398,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -415,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -439,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -455,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -465,7 +456,8 @@
      "output_type": "stream",
      "text": [
       "[Info] training a classifier for following classes neg, pos\n",
-      "[Info] test a classifier\n",
+      "[Info] testing a classifier\n",
+      "vocab length = 43915\n",
       "[Info] Accuracy = 0.5\n"
      ]
     }
@@ -560,12 +552,12 @@
     "pclasses=nb.test(testdata)\n",
     "acc=np.sum(pclasses==testlabels)/float(testlabels.shape[0])\n",
     "print 'accuracy =', acc \n",
-    "assert_greater(acc, 0.77, \"Acc must be greater then 77% you are doing something wrong\")    "
+    "assert_greater(acc, 0.77, \"Acc must be greater than 77%; you are doing something wrong\")    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -578,7 +570,21 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "'pos' != 'neg'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-95-d1dac4f7bb02>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mtrue_nb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomment_pos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"pos\"\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mtrue_nb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomment_neg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"neg\"\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0minverted_nb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomment_pos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"neg\"\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/muneebaadil/anaconda2/lib/python2.7/unittest/case.pyc\u001b[0m in \u001b[0;36massertEqual\u001b[0;34m(self, first, second, msg)\u001b[0m\n\u001b[1;32m    511\u001b[0m         \"\"\"\n\u001b[1;32m    512\u001b[0m         \u001b[0massertion_func\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getAssertEqualityFunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 513\u001b[0;31m         \u001b[0massertion_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    514\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    515\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0massertNotEqual\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/muneebaadil/anaconda2/lib/python2.7/unittest/case.pyc\u001b[0m in \u001b[0;36m_baseAssertEqual\u001b[0;34m(self, first, second, msg)\u001b[0m\n\u001b[1;32m    504\u001b[0m             \u001b[0mstandardMsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'%s != %s'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msafe_repr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msafe_repr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msecond\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    505\u001b[0m             \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_formatMessage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstandardMsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 506\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfailureException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    507\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    508\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0massertEqual\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: 'pos' != 'neg'"
+     ]
+    }
+   ],
    "source": [
     "from nose.tools import assert_equal\n",
     "\n",
