Added a dummy example from slides to test the function

--- a/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
+++ b/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -329,7 +329,6 @@
     "        '''\n",
     "        \n",
     "        nexamples, nfeatures=X.shape\n",
-    "        print 'vocab length =', len(self.vocab.keys())\n",
     "        # YOUR CODE HERE\n",
     "        out = np.zeros(shape=(nexamples,), dtype='S3')\n",
     "        for i, example in enumerate(X): \n",
@@ -358,17 +357,17 @@
     "        maxprob = 0.0 \n",
     "        maxclass = self.classes[0]\n",
     "        for k in self.classes: \n",
-    "            prob = 0.0\n",
-    "            for w in words: \n",
-    "                toadd = wordcounts[w] * math.log((self.vocab[w][k]+1.) / (self.wordperclasscounts[k]+vocablen))\n",
-    "                prob += toadd\n",
-    "            prob += ((1. * self.classcounts[k])/self.nexamples)\n",
+    "            prob = 1.0\n",
+    "            for w in wordcounts.keys(): \n",
+    "                print 'wordcount[w] =', w, wordcounts[w]\n",
+    "                prob *= ((1.+self.vocab[w][k])/(vocablen + self.wordperclasscounts[k]))**(wordcounts[w])\n",
+    "            prob += ((1. * self.classcounts[k])/self.nexamples*1.)\n",
     "            \n",
     "            if prob > maxprob: \n",
     "                maxprob = prob \n",
     "                maxclass = k\n",
     "        #raise NotImplementedError()\n",
-    "        return k \n",
+    "        return maxclass, maxprob\n",
     "        "
    ]
   },
@@ -385,6 +384,47 @@
    "source": [
     "import pandas as pd\n",
     "import tools as t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wordcount[w] = japan 1\n",
+      "wordcount[w] = chinese 3\n",
+      "wordcount[w] = tokyo 1\n",
+      "wordcount[w] = japan 1\n",
+      "wordcount[w] = chinese 3\n",
+      "wordcount[w] = tokyo 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('c', 0.7504016183732969)"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mytrain = ['chinese beijing chinese', 'chinese chinese shanghai', \n",
+    "          'chinese macao', 'tokyo japan chinese']\n",
+    "mylabelt = ['c', 'c','c','j']\n",
+    "mynb = NaiveBayes(np.unique(np.array(mylabelt)))\n",
+    "mynb.train(mytrain, mylabelt)\n",
+    "#for it in mynb.classcounts.items():\n",
+    "#    print it, mynb.nexamples  \n",
+    "mynb.predict('chinese chinese chinese tokyo japan')\n"
    ]
   },
   {
@@ -446,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
